# lbm-rs

./: Cargo.toml  readme.md
src/: boundary.rs  geometry.rs  grid.rs  lib.rs  main.rs  solver.rs  traits.rs
src/distribution/: d2q9.rs  mod.rs
src/geometry/: circle.rs  mod.rs  plane.rs  point.rs  rectangle.rs
src/io/: mod.rs  traits.rs  vtk.rs
src/physics/: mod.rs  ns.rs
